# ConsoleFilterApplication

./: CMakeLists.txt  CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  ExceptionInFilter.cpp  ExceptionInFilter.h  Filter.h  FishEyeFilter.cpp  FishEyeFilter.h  GaussFilter.cpp  GaussFilter.h  GrayScaleFilter.cpp  GrayScaleFilter.h  Image.cpp  Image.h  MatrixFilter.cpp  MatrixFilter.h  NegativeFilter.cpp  NegativeFilter.h  Parser.cpp  Parser.h  README.md  ReadWrite.cpp  ReadWrite.h  SharpeningFilter.cpp  SharpeningFilter.h  image_processor.cpp
